@@ -130,5 +130,7 @@
     <Phrase English="Self" ID="0120"><![CDATA[Self]]></Phrase>
     <Phrase English="Soundtrack" ID="0121"><![CDATA[Soundtrack]]></Phrase>
     <Phrase English="Bottom 100" ID="0122"><![CDATA[Bottom 100]]></Phrase>
+    <Phrase English="Music Department" ID="0123"><![CDATA[Music Department]]></Phrase>
+    <Phrase English="Miscellaneous Crew" ID="0124"><![CDATA[Miscellaneous Crew]]></Phrase>
   </Phrases>
 </Translation>
